@@ -9,6 +9,7 @@
    <property name="hidden">0</property>
    <property name="index">Title</property>
    <property name="default"></property>
+   <property name="custom_css"></property>
   </criterion>
   <criterion name="c1">
    <property name="widget">alphabetic</property>
@@ -20,6 +21,7 @@
    <property name="count">0</property>
    <property name="hidezerocount">0</property>
    <property name="default"></property>
+   <property name="custom_css"></property>
   </criterion>
   <criterion name="c2">
    <property name="widget">criteria</property>
@@ -27,6 +29,7 @@
    <property name="position">left</property>
    <property name="section">default</property>
    <property name="hidden">0</property>
+   <property name="custom_css"></property>
   </criterion>
   <criterion name="c3">
    <property name="widget">resultsperpage</property>
@@ -38,6 +41,7 @@
    <property name="end">10</property>
    <property name="step">1</property>
    <property name="default">5</property>
+   <property name="custom_css"></property>
   </criterion>
   <criterion name="c4">
    <property name="widget">sorting</property>
@@ -47,6 +51,7 @@
    <property name="hidden">1</property>
    <property name="vocabulary"></property>
    <property name="default">effective(reverse)</property>
+   <property name="custom_css"></property>
   </criterion>
  </criteria>
 </object>
