@@ -306,6 +306,7 @@ Export
         <property name="position">top</property>
         <property name="section">default</property>
         <property name="hidden">False</property>
+        <property name="custom_css"></property>
         <property name="count">False</property>
         <property name="cloud">sphere</property>
        </criterion>
@@ -321,6 +322,7 @@ Export
         <property name="position">left</property>
         <property name="section">default</property>
         <property name="hidden">True</property>
+        <property name="custom_css"></property>
         <property name="count">True</property>
        </criterion>
       </criteria>
@@ -364,6 +366,7 @@ Let's see our beautiful faceted navigable container
         <property name="position">top</property>
         <property name="section">default</property>
         <property name="hidden">False</property>
+        <property name="custom_css"></property>
        </criterion>
       </criteria>
      </object>
