@@ -35,7 +35,8 @@ Default faceted widgets
        <property name="section">default</property>
        <property name="hidden">0</property>
        <property name="index">Title</property>
-       <property name="default"...>
+       <property name="default"></property>
+       <property name="custom_css"></property>
       </criterion>
       <criterion name="c1">
        <property name="widget">alphabetic</property>
@@ -46,7 +47,8 @@ Default faceted widgets
        <property name="index">Title</property>
        <property name="count">0</property>
        <property name="hidezerocount">0</property>
-       <property name="default"...>
+       <property name="default"></property>
+       <property name="custom_css"></property>
       </criterion>
       <criterion name="c2">
        <property name="widget">criteria</property>
@@ -54,6 +56,7 @@ Default faceted widgets
        <property name="position">left</property>
        <property name="section">default</property>
        <property name="hidden">0</property>
+       <property name="custom_css"></property>
       </criterion>
       <criterion name="c3">
        <property name="widget">resultsperpage</property>
@@ -65,6 +68,7 @@ Default faceted widgets
        <property name="end">10</property>
        <property name="step">1</property>
        <property name="default">5</property>
+       <property name="custom_css"></property>
       </criterion>
       <criterion name="c4">
        <property name="widget">sorting</property>
@@ -72,8 +76,9 @@ Default faceted widgets
        <property name="position">left</property>
        <property name="section">default</property>
        <property name="hidden">1</property>
-       <property name="vocabulary"...>
+       <property name="vocabulary"></property>
        <property name="default">effective(reverse)</property>
+       <property name="custom_css"></property>
       </criterion>
      </criteria>
     </object>
